--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.cache.ehcache.config=classpath:ehcache.xml
+spring.jpa.properties.javax.persistence.sharedCache.mode=ALL
+
+
+spring.jpa.properties.javax.persistance.sharedCache.mode=ALL
+
 
 logging.level.com.kaivikki== ERROR
 logging.level.com.zaxxer.hikari= ERROR
