Multiple datasouce Postgres and Mongdb -1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.main.banner-mode=off
 
+########### Postgres Data Source ###############
 spring.datasource.url=jdbc:postgresql://localhost:5432/springData
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+########### MongoDb Data Source ###############
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=vikramdb
+
+########### Spring JPA Second Level Cache Configuations  ###############
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
@@ -12,9 +19,7 @@ spring.cache.ehcache.config=classpath:ehcache.xml
 spring.jpa.properties.javax.persistence.sharedCache.mode=ALL
 
 
-spring.jpa.properties.javax.persistance.sharedCache.mode=ALL
-
-
+########### Logging Levels Configurations  ###############
 logging.level.com.kaivikki== ERROR
 logging.level.com.zaxxer.hikari= ERROR
 logging.level.org.springframework= ERROR
