Multiple datasouce Postgres and Mongdb -2: Manual EM and TM configuration

--- a/src/main/resources/application2.properties
+++ b/src/main/resources/application2.properties
@@ -1,9 +1,9 @@
 spring.main.banner-mode=off
 
 ########### Postgres Data Source ###############
-spring.datasource-pg.url=jdbc:postgresql://localhost:5432/springData
-spring.datasource-pg.username=postgres
-spring.datasource-pg.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/springData
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 ########### MongoDb Data Source ###############
 spring.data.mongodb.host=localhost
